--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h1>Cookie Clicker</h1>
                     </div>
                     <div>
-                        <p>Counter : 0</p>
+                        <p>Counter : <span id="counter"></span></p>
                     </div>
                 </div>
                 <div>
@@ -31,6 +31,7 @@
     </section>
 
 
+    <script src="script.js"></script>
 </body>
 
 </html>
